# usbbluetooth-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  scorecard.yml
examples/: list_controllers.py  reset_controllers.py
src/usbbluetooth/: __init__.py  controller.py  device_closed_exception.py  hci_hdr_type.py  list_controllers.py  wrong_driver_exception.py
src/usbbluetooth/exception/: device_closed_exception.py  insufficient_permissions_exception.py  wrong_driver_exception.py
